# Actividades_web

api-python/: app.py  config.py  pyproject.toml  respaldo.sql
comprimidos/Practica_Crud/crud-react/: package-lock.json  package.json
comprimidos/nose/: maquetado del proyecto.txt
comprimidos/practica-login/login-react/src/: App.jsx
crud-react/src/: App.jsx
dashboard-react/: package-lock.json  package.json
dashboard-react/src/: App.jsx  main.jsx
login-react/: package-lock.json  package.json
login-react/src/pages/: Dashboard.jsx  Login.jsx
pokepractica/pokedex-react/: package-lock.json  package.json
pokepractica/pokedex-react/src/: App.css  App.jsx  index.css
pokepractica/pokedex-react/src/components/: DetallePanel.css  DetallePanel.jsx  FotoPrincipal.css  FotoPrincipal.jsx  TarjetaPokemon.css  TarjetaPokemon.jsx
pokepractica/pokedex-react/src/services/: pokemonService.js
pokepractica/pokedex/pokedex-angular/: README.md  angular.json  package-lock.json  package.json
pokepractica/pokedex/pokedex-angular/src/: styles.css
pokepractica/pokedex/pokedex-angular/src/app/: app.ts  (+4 more)
pokepractica/pokedex/pokedex-react/src/: App.css  App.jsx  index.css
practica-alumnos-react/: index.html  package-lock.json  package.json
practica-alumnos-react/src/: App.jsx
practica-alumnos-react/src/components/: ModalAlumno.jsx  TablaAlumno.jsx
practica-componentes-react/: package-lock.json  package.json
practica-componentes-react/src/: App.jsx
practica-componentes-react/src/components/: Footer.jsx  Header.jsx  Nav.jsx
pruebas_api/: bruno.json  prueba post.bru
(+26 files in other folders)
